@@ -2,15 +2,12 @@ package com.ita.edu.greencity.tests.ui.pages.sign_up;
 
 import com.ita.edu.greencity.tests.ui.pages.testrunners.TestRun;
 import com.ita.edu.greencity.ui.pages.header.HeaderSignedOutComponent;
-import com.ita.edu.greencity.ui.pages.orders.SelectRegion;
-import com.ita.edu.greencity.ui.pages.sign_in.SignInComponent;
 import com.ita.edu.greencity.ui.pages.sign_up.SignUpComponent;
-import com.ita.edu.greencity.ui.pages.ubs_homepage.UbsHomePage;
 import org.apache.commons.lang.RandomStringUtils;
-import org.testng.Assert;
 import org.testng.annotations.AfterTest;
 import org.testng.annotations.BeforeTest;
 import org.testng.annotations.Test;
+import org.testng.asserts.SoftAssert;
 
 import java.sql.Connection;
 import java.sql.DriverManager;
@@ -21,13 +18,12 @@ public class SignUpPersonTest extends TestRun {
 
     static Connection con = null;
     private static Statement stmt;
-    private String userEmail = RandomStringUtils.randomAlphabetic(5) + "@gmail.com";
-    private String userName = RandomStringUtils.randomAlphabetic(10);
-    private String userPassword = "yachtOP_1";
-    private String query1 = "SELECT id\n" +
+    private final String userEmail = RandomStringUtils.randomAlphabetic(5) + "@gmail.com";
+    private final String userName = RandomStringUtils.randomAlphabetic(10);
+    private final String query1 = "SELECT id\n" +
             "FROM greencity_ubs.public.users\n" +
             "WHERE recipient_email = '" + userEmail + "' AND recipient_name ='" + userName + "'";
-    private String query2 = "DELETE\n" +
+    private final String query2 = "DELETE\n" +
             "FROM greencity_ubs.public.users\n" +
             "WHERE recipient_email ='" + userEmail + "' AND recipient_name ='" + userName + "'";
 
@@ -36,7 +32,7 @@ public class SignUpPersonTest extends TestRun {
         String dbUrl = provider.getDbUrl();
         String dbUsername = provider.getDbUsername();
         String dbPassword = provider.getDbPassword();
-        Class.forName("org.postgresql.Driver").newInstance();
+        Class.forName("org.postgresql.Driver").getDeclaredConstructor().newInstance();
         con = DriverManager.getConnection(dbUrl, dbUsername, dbPassword);
         stmt = con.createStatement();
         ResultSet res = stmt.executeQuery(query1);
@@ -53,24 +49,18 @@ public class SignUpPersonTest extends TestRun {
     @Test
     public void test() {
         SignUpComponent signUpComponent = new HeaderSignedOutComponent(driver).clickSignUp();
+        String userPassword = "yachtOP_1";
         signUpComponent.inputEmailIntoField(userEmail)
                 .inputUserNameIntoField(userName)
                 .inputPasswordIntoField(userPassword)
                 .inputConfirmPasswordIntoField(userPassword)
                 .clickOnSignUpButton();
-        boolean disabled = signUpComponent.checkDisabledSignUpButton();
-        Assert.assertFalse(disabled);
-        String actual = new UbsHomePage(driver).getTitleH1Text();
-        Assert.assertEquals(actual, "UBS Courier");
-        signUpComponent.sleep(1000);
-        SignInComponent signInComponent = new HeaderSignedOutComponent(driver).clickSignIn();
-        signInComponent.inputEmail(userEmail)
-                .inputPassword(userPassword)
-                .clickSignIn();
-        SelectRegion selectRegion = new SelectRegion(driver);
-        selectRegion.clickOnCloseButton();
-        String actualMessage = new UbsHomePage(driver).getTitleH1Text();
-        Assert.assertEquals(actualMessage, "UBS Courier");
+        boolean isDisabled = signUpComponent.checkDisabledSignUpButton();
+        SoftAssert softAssert = new SoftAssert();
+        softAssert.assertFalse(isDisabled, "SignUp button is disabled!");
+        String expectedAlert = signUpComponent.getTextOfSuccessRegistrationAlert();
+        softAssert.assertEquals(expectedAlert, "Congratulations! You have successfully registered on the site. Please confirm your email address in the email box.", "No alert!");
+        softAssert.assertAll();
     }
 
     @AfterTest
